--- a/index.html
+++ b/index.html
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
+<!-- DOCUMENT HEADING -->
   <head>
-    <title>Novo EarBuds</title>
+    <title>Novo EarBuds</title> <!-- document title -->
+
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- ensures responsiveness -->
+   
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- connecst to Google APIs -->
+
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap" rel="stylesheet"> <!-- Google Fonts -->
+
     <link href="css/grid.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet"/>
-    <!-- link to greensock main library and scroll plugin -->
+    <link href="css/main.css" rel="stylesheet"/> <!-- links to CSS files  -->
+
+    <script defer src="js/main.js"></script> <!-- script tags with defer attribute -->
+ 
   </head>
+
+  <!-- DOCUMENT BODY -->
   <body>
+    <h1 class="hidden">Main Content</h1>
     <div class="grid-con">
       <div class="col-span-full">
+        <h2>Model Viewer</h2>
+
         <model-viewer id="model" src="model/earbuds.gltf" ar ar-modes="webxr scene-viewer quick-look" ios-src="model/earbuds.usdz" camera-controls poster="images/poster.webp" shadow-intensity="1" environment-image="images/aircraft_workshop_01_1k.hdr" exposure="1.7" camera-orbit="52.34deg 88.29deg 874.8m" field-of-view="30deg">
 
           <button class="Hotspot" slot="hotspot-1" data-position="22.114881038306805m 76.41863141465969m 92.72411936367459m" data-normal="0m 3.422854333301474e-8m 0.9999999999999996m" data-visibility-attribute="visible">
@@ -35,22 +49,26 @@
               <div class="HotspotAnnotation" id="hotspot-4">        
               </div>
           </button>
+
           <button slot="ar-button" id="ar-button">
               View in your space
           </button>
+
           <div id="ar-prompt">
-              <img src="images/ar_hand_prompt.png">
+              <img src="images/ar_hand_prompt.png" alt="AR Hand Prompt">
           </div>
         </model-viewer>
       </div>
+
       <div class="col-span-full">
         <h2>Materials</h2>
+
         <ul id="material-list">
           <!-- template will be copied inside of here -->
         </ul>
 
         <!-- Template that will be copied and dynamically inserted -->
-         <!-- This is not rendered until I instantiate it -->
+        <!-- This is not rendered until I instantiate it -->
         <template id="material-template">
           <li>
             <h3 class="material-heading"></h3>
@@ -59,10 +77,14 @@
         </template>
 
       </div>
-    </div>  
-    <!-- Loads <model-viewer> for browsers: -->
+
+      <div class="col-span-1">
+        <svg class="loader hidden" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><circle fill="#A4A4A4" stroke="#A4A4A4" stroke-width="15" r="15" cx="40" cy="100"><animate attributeName="opacity" calcMode="spline" dur="2" values="1;0;1;" keySplines=".5 0 .5 1;.5 0 .5 1" repeatCount="indefinite" begin="-.4"></animate></circle><circle fill="#A4A4A4" stroke="#A4A4A4" stroke-width="15" r="15" cx="100" cy="100"><animate attributeName="opacity" calcMode="spline" dur="2" values="1;0;1;" keySplines=".5 0 .5 1;.5 0 .5 1" repeatCount="indefinite" begin="-.2"></animate></circle><circle fill="#A4A4A4" stroke="#A4A4A4" stroke-width="15" r="15" cx="160" cy="100"><animate attributeName="opacity" calcMode="spline" dur="2" values="1;0;1;" keySplines=".5 0 .5 1;.5 0 .5 1" repeatCount="indefinite" begin="0"></animate></circle></svg>
+      </div>
+
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.0.1/model-viewer.min.js"></script>
-    <script src="js/main.js"></script>
   </body>
 </html>
