--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- DOCUMENT BODY -->
   <body>
     <h1 class="hidden">Main Content</h1>
-    <div class="grid-con">
+    <div class="grid-con" id="model-viewer">
       <div class="col-span-full">
         <h2>Model Viewer</h2>
 
@@ -64,7 +64,7 @@
         </model-viewer>
       </div>
 
-      <div class="col-span-full">
+      <div class="col-span-full" id="materials">
         <h2>Materials</h2>
 
         <div id="loader-con-2">
