--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <!-- DOCUMENT HEADING -->
   <head>
-    <title>Novo EarBuds</title> <!-- document title -->
+    <title>AJAX Application</title> <!-- document title -->
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- ensures responsiveness -->
@@ -17,6 +17,9 @@
     <link href="css/grid.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet"/> <!-- links to CSS files  -->
 
+    <link rel="icon" href="images/earbud2.jpg" type="image/svg+xml"> <!-- favicon -->
+
+
     <script defer src="js/main.js"></script> <!-- script tags with defer attribute -->
  
   </head>
@@ -24,15 +27,24 @@
   <!-- DOCUMENT BODY -->
   <body>
     <h1 class="hidden">Main Content</h1>
-    <div class="grid-con" id="model-viewer">
-      <div class="col-span-full">
+
+    <div class="grid-con">
+
+      <div class="col-span-full" id="introduction">
+        <h2 class="intro-heading">Welcome to Novo EarBuds</h2>
+        <p class="p-heading">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae distinctio ea possimus quos repellat velit cupiditate, non, voluptas tenetur quod dolor inventore ducimus fugit officiis.</p>
+        <p class="copy-heading">by Henrique Gamborgi Menezes</p>
+      </div>
+
+
+      <div class="col-span-full" id="model-viewer">
         <h2>Model Viewer</h2>
 
         <div id="loader-con">
-          <svg id="loader" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><circle fill="#A4A4A4" stroke="#A4A4A4" stroke-width="15" r="15" cx="40" cy="100"><animate attributeName="opacity" calcMode="spline" dur="2" values="1;0;1;" keySplines=".5 0 .5 1;.5 0 .5 1" repeatCount="indefinite" begin="-.4"></animate></circle><circle fill="#A4A4A4" stroke="#A4A4A4" stroke-width="15" r="15" cx="100" cy="100"><animate attributeName="opacity" calcMode="spline" dur="2" values="1;0;1;" keySplines=".5 0 .5 1;.5 0 .5 1" repeatCount="indefinite" begin="-.2"></animate></circle><circle fill="#A4A4A4" stroke="#A4A4A4" stroke-width="15" r="15" cx="160" cy="100"><animate attributeName="opacity" calcMode="spline" dur="2" values="1;0;1;" keySplines=".5 0 .5 1;.5 0 .5 1" repeatCount="indefinite" begin="0"></animate></circle></svg>
-        </div>
+          <svg id="loader"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><circle fill="#757575" stroke="#757575" stroke-width="15" r="15" cx="40" cy="65"><animate attributeName="cy" calcMode="spline" dur="2" values="65;135;65;" keySplines=".5 0 .5 1;.5 0 .5 1" repeatCount="indefinite" begin="-.4"></animate></circle><circle fill="#757575" stroke="#757575" stroke-width="15" r="15" cx="100" cy="65"><animate attributeName="cy" calcMode="spline" dur="2" values="65;135;65;" keySplines=".5 0 .5 1;.5 0 .5 1" repeatCount="indefinite" begin="-.2"></animate></circle><circle fill="#757575" stroke="#757575" stroke-width="15" r="15" cx="160" cy="65"><animate attributeName="cy" calcMode="spline" dur="2" values="65;135;65;" keySplines=".5 0 .5 1;.5 0 .5 1" repeatCount="indefinite" begin="0"></animate></circle></svg>
+       </div>
 
-        <model-viewer id="model" src="model/earbuds.gltf" ar ar-modes="webxr scene-viewer quick-look" ios-src="model/earbuds.usdz" camera-controls poster="images/poster.webp" shadow-intensity="1" environment-image="images/aircraft_workshop_01_1k.hdr" exposure="1.7" camera-orbit="52.34deg 88.29deg 874.8m" field-of-view="30deg">
+          <model-viewer id="model" src="model/earbuds.gltf" ar ar-modes="webxr scene-viewer quick-look" ios-src="model/earbuds.usdz" camera-controls poster="images/poster.webp" shadow-intensity="1" environment-image="images/aircraft_workshop_01_1k.hdr" exposure="1.7" camera-orbit="52.34deg 88.29deg 874.8m" field-of-view="30deg">
 
           <button class="Hotspot" slot="hotspot-1" data-position="22.114881038306805m 76.41863141465969m 92.72411936367459m" data-normal="0m 3.422854333301474e-8m 0.9999999999999996m" data-visibility-attribute="visible">
               <div class="HotspotAnnotation" id="hotspot-1">
@@ -68,7 +80,7 @@
         <h2>Materials</h2>
 
         <div id="loader-con-2">
-          <svg id="loader-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><circle fill="#A4A4A4" stroke="#A4A4A4" stroke-width="15" r="15" cx="40" cy="100"><animate attributeName="opacity" calcMode="spline" dur="2" values="1;0;1;" keySplines=".5 0 .5 1;.5 0 .5 1" repeatCount="indefinite" begin="-.4"></animate></circle><circle fill="#A4A4A4" stroke="#A4A4A4" stroke-width="15" r="15" cx="100" cy="100"><animate attributeName="opacity" calcMode="spline" dur="2" values="1;0;1;" keySplines=".5 0 .5 1;.5 0 .5 1" repeatCount="indefinite" begin="-.2"></animate></circle><circle fill="#A4A4A4" stroke="#A4A4A4" stroke-width="15" r="15" cx="160" cy="100"><animate attributeName="opacity" calcMode="spline" dur="2" values="1;0;1;" keySplines=".5 0 .5 1;.5 0 .5 1" repeatCount="indefinite" begin="0"></animate></circle></svg>
+          <svg id="loader-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><circle fill="#757575" stroke="#757575" stroke-width="15" r="15" cx="40" cy="65"><animate attributeName="cy" calcMode="spline" dur="2" values="65;135;65;" keySplines=".5 0 .5 1;.5 0 .5 1" repeatCount="indefinite" begin="-.4"></animate></circle><circle fill="#757575" stroke="#757575" stroke-width="15" r="15" cx="100" cy="65"><animate attributeName="cy" calcMode="spline" dur="2" values="65;135;65;" keySplines=".5 0 .5 1;.5 0 .5 1" repeatCount="indefinite" begin="-.2"></animate></circle><circle fill="#757575" stroke="#757575" stroke-width="15" r="15" cx="160" cy="65"><animate attributeName="cy" calcMode="spline" dur="2" values="65;135;65;" keySplines=".5 0 .5 1;.5 0 .5 1" repeatCount="indefinite" begin="0"></animate></circle></svg>
         </div>
 
         <ul id="material-list">
@@ -84,6 +96,13 @@
           </li>
         </template>
 
+      </div>
+
+      <div class="col-span-full" id="footer">
+        <h2 class="hidden">Footer</h2>
+
+        <h3>Copyright 2024 &copy; Henrique Gamborgi Menezes</h3>
+        <p>This AJAX Application was developed as an assignment for Multimedia Authoring 3, course of the Interactive Media Design Program (IDP3) of Fanshawe College, Fall Term, 2024.</p>
       </div>
 
     </div>
